--- a/templates/index.html
+++ b/templates/index.html
@@ -484,7 +484,7 @@
         <p>Copyright 2025</p>
     </div>
 
-    <script src="/static/js/filters.js"></script>
-    <script src="/static/js/time-filter.js"></script>
+    <script src="{{ url_for('static', filename='js/filters.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/time-filter.js') }}"></script>
 </body>
 </html>
